Major changes made to game.js. -Clipping is fixed. -Highscore is kept track of and saved locally using cookies. -Finished state has been created to stall the game after a loss so the user can look at the tower until they click again. -Touch support has been added. -Notifications for if the player perfectly places a segment or reaches a new high score display themselves using a fade-in and fade-out. -Web fonts have been imported. -Design changes have been made. -Other minor changes.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,8 @@
+/* Fonts */
+body{
+    font-family: 'Dosis', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
+}
 
 /*Canvas Style */
 #canvas{
